-About: efectos tooltip sobre iconos sociales. Efecto neon y espejo en icono futurama.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,77 +1,123 @@
 
 
+<div class="seccionCentrada">
+    <h1>Generadores de jpromocion</h1>
 
-<h1>Generadores de jpromocion</h1>
-
-
-<div class="panelFluidoSegundoNivel">
-  <section>
-    <p style="margin-left: 5px;">Versión v.{{ versionApp }}</p>
-  </section>
-  <br/>
-  <section>
-    <h3>GitHub</h3>
-    <div class="efectoCircular">
-      <img  src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-      <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">angular-j-generadores-fe2</a>
-    </div>
-  </section>
-
-  <br/>
-  <section>
-    <h3>API REST fuente</h3>
+    <h3>FrontEnd Angular</h3>
     <div>
-      <p style="margin-left: 5px;">Versión {{ versionApiRest }}</p>
+      <p>Versión v.{{ versionApp }}</p>
     </div>
+
+    <div class="wrapperLogo">
+      <div class="icon github">
+          <div class="tooltip">
+              Github
+          </div>
+          <span><a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
+          </span>
+      </div>
+      <div class="efectoCircular">
+        <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">angular-j-generadores-fe2</a>
+      </div>
+    </div>
+
+    <br/>
+    <br/>
+
+    <h3>API REST Backend</h3>
     <div>
-      <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-      <a href="https://github.com/jpromocion/rest-j-generadores" target="_blank">rest-j-generadores</a>
+      <p>Versión {{ versionApiRest }}</p>
     </div>
-  </section>
 
+    <div class="wrapperLogo">
+      <div class="icon github">
+          <div class="tooltip">
+              Github
+          </div>
+          <span><a href="https://github.com/jpromocion/rest-j-generadores" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
+          </span>
+      </div>
+      <div class="efectoCircular">
+        <a href="https://github.com/jpromocion/rest-j-generadores" target="_blank">rest-j-generadores</a>
+      </div>
+    </div>
 
-</div>
+    <br/>
+    <br/>
+    <br/>
 
+    <h1>Autor</h1>
 
+    <h2>Jose Javier Gálvez Gómez (jpromocion)</h2>
 
-<br/>
-<br/>
+    <div class="neon">
+      <!--
+      <span></span><span></span>
+      <span></span><span></span>
+      -->
+      <img src="/zapp_blanco.jpg" alt="logo">
+    </div>
 
-<h1>Autor</h1>
-<div class="panelFluidoSegundoNivel">
-  <h2>Jose Javier Gálvez Gómez (jpromocion)</h2>
+    <h2>Información de contacto</h2>
 
-  <img style="vertical-align: middle;width: 200px;height: 200px;border-radius: 50%;" src="/zapp_blanco.jpg" alt="logo">
-
-  <br/>
-
-  <h2>Información de contacto</h2>
-
-  <div tabindex="-1">
-    <div class="panelFluidoSegundoNivel">
-      <section>
+    <div>
         <h3>LinkedIn</h3>
-        <div>
-          <img src="/LI-In-Bug.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-          <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >linkedin.com/in/josejgalvez</a>
+        <div class="wrapperLogo">
+          <div class="icon linkedin">
+              <div class="tooltip">
+                LinkedIn
+              </div>
+              <span><a href="https://www.linkedin.com/in/josejgalvez" target="_blank"><img src="/linkedin_blanco.png" alt="Linkedin" /></a>
+              </span>
+          </div>
+          <div class="efectoCircular">
+            <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >linkedin.com/in/josejgalvez</a>
+          </div>
         </div>
-      </section>
-      <br/>
-      <section>
+
+        <br/>
+        <br/>
+
         <h3>GitHub</h3>
-        <div>
-          <img src="/github-mark-white.png" alt="GitHub" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 5px;">
-          <a href="https://github.com/jpromocion"  target="_blank">github.com/jpromocion</a>
+        <div class="wrapperLogo">
+          <div class="icon github">
+              <div class="tooltip">
+                  Github
+              </div>
+              <span><a href="https://github.com/jpromocion" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
+              </span>
+          </div>
+          <div class="efectoCircular">
+            <a href="https://github.com/jpromocion"  target="_blank">github.com/jpromocion</a>
+          </div>
         </div>
-      </section>
-      <br/>
-      <section>
+
+        <br/>
+        <br/>
+
         <h3>Enviar email</h3>
         <div>
-          <mat-icon>mail</mat-icon>
-          <a href="mailto:jpromocion@gmail.com" target="_blank" style="margin-left: 5px;">jpromocion&#64;gmail.com</a>
+          <div class="wrapperLogo">
+            <div class="icon email">
+                <div class="tooltip">
+                    Email
+                </div>
+                <span>
+                  <a href="mailto:jpromocion@gmail.com" target="_blank">
+                    <!--<mat-icon>mail</mat-icon>-->
+                    <img src="/sobre2.png" alt="Email" />
+                  </a>
+                </span>
+            </div>
+            <div class="efectoCircular">
+              <a href="mailto:jpromocion@gmail.com" target="_blank" style="margin-left: 5px;">jpromocion&#64;gmail.com</a>
+            </div>
+          </div>
+
         </div>
-      </section>
+
     </div>
-  </div>
+
 </div>
+
+
