--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,13 +1,168 @@
 
-//Buscamos que los enlaces del about, tengan un efecto de fondo sobre un gradiente que va cambiando de color
-a{
+.seccionCentrada{
+  justify-content: center;
+  text-align: center;
+}
+
+
+//wrapperLogo: encerramos una estructura donde configuremos un tooltip personalizado por css
+//que aparece por transiccion al situarnos sobre el campo mostrando el nombre de la red social
+//y haciendo cambiar el color del icono y del tooltip a un color semejante a la red social.
+.wrapperLogo {
+  display: inline-flex;
+  align-items: center;
+}
+
+.wrapperLogo .icon {
+    //margin: 0 20px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapperLogo .icon span {
+    display: block;
+    height: 60px;
+    width: 60px;
+    //background: #fff;
+    background: black;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapperLogo .icon span i {
+    line-height: 60px;
+    font-size: 25px;
+}
+
+.wrapperLogo .icon span img {
+  line-height: 60px;
+  font-size: 25px;
+  text-align: center;
+  align-items: center;
+  display: block;
+  margin: auto;
+  width: 40%;
+  height: 40%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+
+.wrapperLogo .icon .tooltip {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background: #fff;
+    color: #fff;
+    padding: 10px 18px;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 25px;
+    opacity: 0;
+    pointer-events: none;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapperLogo .icon:hover .tooltip {
+    top: -70px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.wrapperLogo .icon .tooltip:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    background: #fff;
+    left: 50%;
+    bottom: -6px;
+    transform: translateX(-50%) rotate(45deg);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+
+
+.wrapperLogo .icon:hover span {
+    color: #fff;
+}
+.wrapperLogo .icon:hover span,
+.wrapperLogo .icon:hover .tooltip {
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
+}
+
+
+
+.wrapperLogo .facebook:hover span,
+.wrapperLogo .facebook:hover .tooltip,
+.wrapperLogo .facebook:hover .tooltip:before {
+    background: #3B5999;
+}
+
+.wrapperLogo .twitter:hover span,
+.wrapperLogo .twitter:hover .tooltip,
+.wrapperLogo .twitter:hover .tooltip:before {
+    background: #46C1F6;
+}
+
+.wrapperLogo .instagram:hover span,
+.wrapperLogo .instagram:hover .tooltip,
+.wrapperLogo .instagram:hover .tooltip:before {
+    background: #e1306c;
+}
+
+.wrapperLogo .github:hover span,
+.wrapperLogo .github:hover .tooltip,
+.wrapperLogo .github:hover .tooltip:before {
+    background: #333;
+}
+
+.wrapperLogo .youtube:hover span,
+.wrapperLogo .youtube:hover .tooltip,
+.wrapperLogo .youtube:hover .tooltip:before {
+    background: #DE463B;
+}
+
+.wrapperLogo .linkedin:hover span,
+.wrapperLogo .linkedin:hover .tooltip,
+.wrapperLogo .linkedin:hover .tooltip:before {
+    background: #0e76a8;
+}
+
+.wrapperLogo .email:hover span,
+.wrapperLogo .email:hover .tooltip,
+.wrapperLogo .email:hover .tooltip:before {
+    background: rgb(214, 213, 213);
+}
+
+
+
+
+
+
+
+
+//efectoCircular: Buscamos que los enlaces del about, tengan un efecto de fondo sobre un gradiente que va cambiando de color
+.efectoCircular a{
   position: relative; //es lo que hace que el gradiente se fije solo al enlace
   padding: 5px 5px;
   color: white; //por defecto en enlace la letra es un rosa... se confunde con los colores del gradiente
 }
 //definimos un elemento detras (z-index: -1) del enlace que sera el gradiente en si
 //de contenido vacio, posicion absoluta para coger el tamaño del a
-a::before{
+.efectoCircular a::before{
   content: "";
   position: absolute;
   top: 0;
@@ -28,3 +183,143 @@ a::before{
   50% { background-position: 400% 0; } //a mitad de animacion la posicion sera 400% para que se vea el cambio de color
   100% { background-position: 0 0; } //al final de la animacion volvera a la posicion inicial
 }
+
+
+
+
+
+
+
+
+
+
+
+//neon: efecto de neon en el icoino central de futurama
+.neon {
+  position: relative;
+  display: inline-block;
+  transition: 0.5s;
+  letter-spacing: 4px;
+  overflow: hidden;
+  margin-right: 50px;
+  border-radius: 44%;
+  //background: #bb77fa;
+}
+
+.neon img {
+  vertical-align: middle;
+  width: 80%;
+  height: 80%;
+  border-radius: 45%;
+  //sombrear de negro la parte inferior para evitar cortes... no es necesario
+  //mask-image: linear-gradient(black 80%, transparent);
+}
+
+
+.neon:hover {
+  background: #bb77fa;
+  color: #050801;
+  //fuerza una sombra en este color progresiva apagandose conforme se aleja... un efecto neon chulo
+  box-shadow: 0 0 5px #bb77fa,
+      0 0 25px #bb77fa,
+      0 0 50px #bb77fa,
+      0 0 200px #bb77fa;
+  //crea un reflejo en la parte inferior
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+}
+
+/* Esto seriqa si tuivieras varios elementos y quisieras ir cambiadno el color del neon en cada uno de ellos rotativamente
+.neon:nth-child(1) {
+  filter: hue-rotate(270deg);
+}
+.neon:nth-child(2) {
+  filter: hue-rotate(110deg);
+}
+*/
+
+
+//permite definir 4 lineas formando un cuadrado alrededor que tendrán una transicion de linea dinamica
+//una detras de otra. Pero para ello, seria necesario que fuera un cuadrado, al final lo hicimos redondo!!!
+//y tambien tener los 4 span que al final hemos comentado
+/*
+.neon span {
+  position: absolute;
+  display: block;
+}
+.neon span:nth-child(1) {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #bb77fa);
+  animation: animate1 1s linear infinite;
+}
+@keyframes animate1 {
+  0% {
+      left: -100%;
+  }
+
+  50%,
+  100% {
+      left: 100%;
+  }
+}
+.neon span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg,
+          transparent, #bb77fa);
+  animation: animate2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+@keyframes animate2 {
+  0% {
+      top: -100%;
+  }
+
+  50%,
+  100% {
+      top: 100%;
+  }
+}
+.neon span:nth-child(3) {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #bb77fa);
+  animation: animate3 1s linear infinite;
+  animation-delay: 0.50s;
+}
+@keyframes animate3 {
+  0% {
+      right: -100%;
+  }
+
+  50%,
+  100% {
+      right: 100%;
+  }
+}
+a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #bb77fa);
+  animation: animate4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+@keyframes animate4 {
+  0% {
+      bottom: -100%;
+  }
+
+  50%,
+  100% {
+      bottom: 100%;
+  }
+}
+*/
