about: sobreado lila

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
           <span><a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
           </span>
       </div>
-      <div class="efectoCircular">
+      <div class="efectoCircular" style="margin: 10px;">
         <a href="https://github.com/jpromocion/angular-j-generadores-fe2" target="_blank">angular-j-generadores-fe2</a>
       </div>
     </div>
@@ -37,7 +37,7 @@
           <span><a href="https://github.com/jpromocion/rest-j-generadores" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
           </span>
       </div>
-      <div class="efectoCircular">
+      <div class="efectoCircular" style="margin: 10px;">
         <a href="https://github.com/jpromocion/rest-j-generadores" target="_blank">rest-j-generadores</a>
       </div>
     </div>
@@ -70,7 +70,7 @@
               <span><a href="https://www.linkedin.com/in/josejgalvez" target="_blank"><img src="/linkedin_blanco.png" alt="Linkedin" /></a>
               </span>
           </div>
-          <div class="efectoCircular">
+          <div class="efectoCircular" style="margin: 10px;">
             <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >linkedin.com/in/josejgalvez</a>
           </div>
         </div>
@@ -87,7 +87,7 @@
               <span><a href="https://github.com/jpromocion" target="_blank"><img src="/github-mark-white.png" alt="GitHub" /></a>
               </span>
           </div>
-          <div class="efectoCircular">
+          <div class="efectoCircular" style="margin: 10px;">
             <a href="https://github.com/jpromocion"  target="_blank">github.com/jpromocion</a>
           </div>
         </div>
@@ -109,7 +109,7 @@
                   </a>
                 </span>
             </div>
-            <div class="efectoCircular">
+            <div class="efectoCircular" style="margin: 10px;">
               <a href="mailto:jpromocion@gmail.com" target="_blank" style="margin-left: 5px;">jpromocion&#64;gmail.com</a>
             </div>
           </div>
