--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -35,7 +35,7 @@
     border-radius: 50%;
     position: relative;
     z-index: 2;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 10px 10px #bb77fa;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
@@ -71,7 +71,7 @@
     border-radius: 25px;
     opacity: 0;
     pointer-events: none;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 10px #bb77fa;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
@@ -213,6 +213,7 @@
   border-radius: 45%;
   //sombrear de negro la parte inferior para evitar cortes... no es necesario
   //mask-image: linear-gradient(black 80%, transparent);
+  box-shadow: 0px 10px 10px #bb77fa;
 }
 
 
