--- a/src/app/genera-archivos/genera-archivos.component.scss
+++ b/src/app/genera-archivos/genera-archivos.component.scss
@@ -1,12 +1,12 @@
 .grid-layout{
   display: grid;
   grid-template-columns: auto;
-  margin: 10px;
+  gap: 5px;
 }
 
 
 .caja{
   width: auto;
   height: auto;
-  margin: 5px;
+  //margin: 5px;
 }
