--- a/src/app/genera-documentos/genera-documentos.component.scss
+++ b/src/app/genera-documentos/genera-documentos.component.scss
@@ -1,14 +1,18 @@
 .grid-layout{
   display: grid;
   grid-template-columns: auto auto;
-  margin: 10px;
+  //una forma de que se auto colocarran con un minimo tamaño a mostrar
+  //en la practica acaba tambien reduciendo a dos columnas en el minimo... y tal como lo tenemos
+  //es mas manejable
+  //grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 5px;
 }
 
 
 .caja{
   width: auto;
   height: auto;
-  margin: 5px;
+  //margin: 5px;
   //border: 4px solid black;
   //background-color: lightblue;
   //line-height: 150px;
