--- a/src/app/genera-numeros/genera-numeros.component.scss
+++ b/src/app/genera-numeros/genera-numeros.component.scss
@@ -1,14 +1,14 @@
 .grid-layout{
   display: grid;
   grid-template-columns: auto auto;
-  margin: 10px;
+  gap: 5px;
 }
 
 
 .caja{
   width: auto;
   height: auto;
-  margin: 5px;
+  //margin: 5px;
 }
 
 
@@ -33,7 +33,7 @@
 .grid-layout-calculadora{
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  margin: 10px;
+  gap: 5px;
   width: 320px;
   border: 1px solid grey;
   background-color: grey;
@@ -43,7 +43,7 @@
 .boton-calculadora{
   width: auto;
   height: auto;
-  margin: 5px;
+  //margin: 5px;
   //background-color: yellow;
 }
 
