--- a/src/styles.scss
+++ b/src/styles.scss
@@ -251,3 +251,9 @@ mat-header-cell {
     transform: rotate(360deg);
   }
 }
+
+//Centrar contenido
+.seccionCentrada{
+  justify-content: center;
+  text-align: center;
+}
