imagenes con fondos degradados en algunos cards concretas.

--- a/src/app/genera-coches/genera-coches.component.scss
+++ b/src/app/genera-coches/genera-coches.component.scss
@@ -1,3 +1,10 @@
+.caja-fondo-coche{
+  background: url("/coche.png") no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+
 .grid-layout{
   display: grid;
   grid-template-columns: auto;
