--- a/src/app/genera-coches/genera-coches.component.html
+++ b/src/app/genera-coches/genera-coches.component.html
@@ -12,9 +12,9 @@
     </div>
 
     <div class="caja c1">
-      <mat-card appearance="outlined">
+      <mat-card appearance="outlined" class="caja-fondo-coche">
         <mat-card-header>Generar Vehículo</mat-card-header>
-        <mat-card-content>
+        <mat-card-content class="caja-desenfocada">
           <mat-form-field style="width: 330px;margin-left: 5px;">
             <mat-label>Seleccionar tipo generación</mat-label>
             <mat-select [(ngModel)]="selectedTipoGenera">
